# genro-pygui

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: data-binding-architecture.md  implementation-plan-structure.md  implementation-plan.md  textual_widgets.md
examples/: __init__.py  button_test.py  complex_app.py  interactive_app.py  showcase.py
examples/_internal/: __init__.py  minimal_app.py  test_compose_list.py  test_mount_approach.py  test_new_builder.py
examples/basic/: __init__.py  button_variants.py  color_stripes.py  hello_world.py  input_form.py  nested_containers.py
examples/interactive/: __init__.py  button_app.py  remote_app.py
examples/widgets/: __init__.py  datatable.py  tabs.py
hooks/: commit-msg  pre-commit
scripts/: generate_textual_schema.py
src/genro_pygui/: __init__.py  bag_app.py  cli.py  registry.py  remote.py  textual_app.py  textual_builder.py  viewer.py
temp/: Remote_TextualApp_Extended_Report.md  TextualBuilder_Report.md  TextualBuilder_Report_v2.md  TextualBuilder_diff.patch
tutorial_textual/: 01_hello_world.py  02_01_nested_containers.py  02_containers.py  03_input_widgets.py  04_buttons_events.py  05_reactive.py  06_screens.py  07_styling.py  08_complete_app.py  README.md
tutorial_textual_bag/: 01_hello_world.py
